Criando função em Javascript

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exeplo3</title>
+    <title>Exemplo3</title>
 </head>
 
 <body>
     <h1>Branch Teste</h1>
+    <script src="script.js">git</script>
 
 </body>
 
